# crewai-segment-builder

./: README.md  app.py  pyproject-old.toml  pyproject.toml
src/segment_ai/: crew.py  main.py
src/segment_ai/config/: agents.yaml  tasks.yaml
