[tool.poetry]
name = "segment_ai"
version = "0.1.0"
description = "segment-ai using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
segment_ai = "segment_ai.main:run"
run_crew = "segment_ai.main:run"
train = "segment_ai.main:train"
replay = "segment_ai.main:replay"
test = "segment_ai.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
