[project]
name = "segment_ai"
version = "0.1.0"
description = "segment-ai using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.0.76.2,<1.0.0",
]

[project.scripts]
segment_ai = "segment_ai.main:run"
run_crew = "segment_ai.main:run"
train = "segment_ai.main:train"
replay = "segment_ai.main:replay"
test = "segment_ai.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
